--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,21 @@
     ],
     "require": {
         "kartik-v/yii2-widgets": "*",
+        "enigmatix/yii2-helpers": "*",
         "php": ">=5.3.0"
-    }
+    },
+    "repositories": [
+            {
+                "type": "package",
+                "package": {
+                    "name": "enigmatix/yii2-helpers",
+                    "version": "dev-master",
+                    "source": {
+                        "url": "git://github.com/enigmatix/yii2-helpers.git",
+                        "type": "git",
+                        "reference": "master"
+                    }
+                }
+            }
+    ]
 }
