--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "enigmatix/yii2-helpers": "*",
         "php": ">=5.3.0"
     },
+    "minimum-stability": "dev",
     "repositories": [
             {
                 "type": "package",
