Updated to include autoloader

--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,10 @@
                     }
                 }
             }
-    ]
+    ],
+    "autoload": {
+        "psr-4": {
+            "enigmatix\\widgets\\": ""
+        }
+    }
 }
