--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         }
     ],
     "require": {
-        "kartik-v/yii2-widgets": "*",
+        "ivaynberg/select2": "*",
         "enigmatix/yii2-helpers": "*",
         "php": ">=5.3.0"
     },
@@ -29,7 +29,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "enigmatix\\widgets\\": ""
+            "enigmatix\\widgets\\": "enigmatix/yii2-widgets"
         }
     }
 }
