--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "minimum-stability": "dev",
     "repositories": [
             {
+                "type": "vcs",
                 "package": {
                     "name": "enigmatix/yii2-helpers",
                     "version": "dev-master",
