--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "enigmatix\\widgets\\": "enigmatix/yii2-widgets"
+            "enigmatix\\widgets\\": ""
         }
     }
 }
