--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
     "require": {
         "enigmatix/yii2-helpers": "*",
 
-        "php": ">=5.3.0"
+        "php": ">=5.4.0"
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "repositories": [
             {
                 "type": "vcs",
