--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=5.4.0",
+        "enigmatix/yii2-widgets":"*"
     },
     "minimum-stability": "stable",
     "autoload": {
